syntax = "proto3";

package memberAccount;

option go_package = "./proto;proto";
option php_namespace = "Omy\\Crius\\MemberAccountServer";

message ProductPackage{
  string product_package_id = 1; // 商品/套餐id
  string code = 2; // 商品/套餐code
  int32 number = 3; // 消费/获得数量
  int32 price = 4; // 商品/套餐价格
  string title = 5; // 商品/套餐名字
  int32 left = 6; // 获得商品/套餐剩余数量
  string category = 7; // 类别 商品 product, 套餐 package
  string id = 8;
}

message CostProductPackageTicketItem {
  string id = 1;
  int32 number = 2; // 消费/获得数量
}

message MakeCardRequest {
  string category = 1;
  string branch_id = 2;
  string code = 3;
}

message MakeCardResponse {
  int32 error_code = 1;
  string error_message = 2;
}

message RechargeCardRequest{
  int32 recharge_value = 1;
  string branch_id = 2;
  repeated PromotionCount promotions = 3;
  Payments payments = 4;
  string recommender = 5;
  string card_id = 6;
}

message RechargeCardResponse{
  int32 error_code = 1;
  string error_message = 2;
  BillData data = 3;
}

message ActivePrimaryCardRequest{
  string phone = 1;
  string phone_code = 2;
  string name = 3;
  string card_id = 4;
  int32 gender = 5;
  string birthday = 6;
  string branch_id = 7;
  Payments payments = 8;
  string password = 9;
  string recommender = 10;
  repeated PromotionCount promotions = 11;
  int32 recharge_value = 12;
}
message ActivePrimaryCardResponse{
  int32 error_code = 1;
  string error_message = 2;
  BillData data = 3;
}

message ActiveSecondaryCardRequest{
  string card_id = 1;
  string branch_id = 2;
  string password = 3;
  string recommender = 4;
  int32 recharge_value = 5;
  string primary_id = 6;
  string primary_password = 7;
  bool primary_verified = 8;
  string primary_account_id = 9;
}
message ActiveSecondaryCardResponse{
  int32 error_code = 1;
  string error_message = 2;
  BillData data = 3;
}

message ActiveBlankCardRequest{
  string card_id =1;
  string branch_id = 2;
  Payments payments = 3;
  string password = 4;
  string recommender = 5;
  repeated PromotionCount promotions = 6;
  int32 recharge_value = 7;
}
message ActiveBlankCardResponse{
  int32 error_code = 1;
  string error_message = 2;
  BillData data = 3;
}

message BillData {
  string bill_id = 1;
  string bill_code = 2;
  string account_id= 3;
  string card_id = 4;
  string card_code = 5;
  string branch_id = 6;
  int32 change_value = 7;
  string change_category = 8;
  string change_type = 9;
  int32 base_value = 10;
  int32 gift_value = 11;
  repeated ProductPackage products = 12;
  repeated ProductPackage packages = 13;
  Payments payments = 14;
  string staff_id = 15;
  string operator_comment = 16;
  string merchant_id = 17;
  int32 created_at = 18;
  string primary_id = 19;
  string primary_code = 20;
  int32 total_base_value = 21;
  int32 total_gift_value = 22;
  repeated ProductPackage total_products = 23;
  repeated ProductPackage total_packages = 24;
}

message PromotionCount {
  string id = 1;
  int32 count = 2;
}
 
message BindCardRequest {
  string card_id = 1;
  string account_id = 2;
  string branch_id = 3;
  string password = 4;
  string recommender = 5;
}

message BindCardResponse {
  int32 error_code = 1;
  string error_message = 2;
}

message Card {
  string id = 1;
  string category = 2;
  string code = 3;
  string create_branch_id = 4;
  string create_staff_id = 5;
  string status = 6;
  int32 opened_at = 7;
  string open_operator = 8;
  repeated string account_id = 9;
  string open_branch_id = 10;
  string member_id = 11;
  string sub_category = 12;
  string primary_id = 13;
}

message CardList {
  repeated Card cards = 1;
  int32 total = 2;
}

message GetCardsRequest {
  string branch_id = 1;
  string category = 2;
  string status = 3;
  int32 offset = 4;
  int32 limit = 5;
}

message GetCardsResponse {
  int32 error_code = 1;
  string error_message = 2;
  CardList data = 3;
}

message ShowCardRequest {
  string card_code = 1;
}

message ShowCardResponse {
  int32 error_code = 1;
  string error_message = 2;
  Card data = 3;
}



message UpdateCardStatusRequest {
  string card_id = 1;
  string action = 2;
}

message ReplaceCardRequest {
  string curr_card_id = 1;
  string new_card_id = 2;
  string password = 4;
  Payments payments = 5;
  string open_branch_id = 6;
}

message CancelCardRequest {
  string card_id = 1;
  string bank_account = 2;
  string bank_name = 3;
  string money_receiver = 4;
  string reason = 5;
}

message GetCardsByAccountRequest {
  string account_id = 1;
}

message GetCardsByAccountResponse {
  int32 error_code = 1;
  string error_message = 2;
  repeated Card data = 3;
}

message ValidateCardPasswordRequest {
  string card_code= 1;
  string password= 2;
}

message ShowCardByIDRequest {
  string id = 1;
}

message ShowCardByIDResponse {
  int32 error_code = 1;
  string error_message = 2;
  Card data = 3;
}

message Payments {
  int32 wechat = 1;
  int32 cash = 2;
  int32 alipay = 3;
  int32 card = 4;
}

message ConsumeRequest{
  string card_id = 1;
  int32 amount = 2;
  int32 point = 3;
  string password = 4;
  bool ignore_password = 5;
  string branch_id = 6;
  repeated ProductPackage products = 7;
  repeated ProductPackage packages = 8;
  string point_bill_id = 9;
  string pos_bill_id = 10;
}

message RefundBillRequest{
  string pos_bill_id = 1;
}